<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <EditText
        android:id="@+id/ptAddDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Description of the task"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAddDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btAdd"
        app:layout_constraintEnd_toStartOf="@+id/ptAddDescription"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAddDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/duration"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddCategory"
        app:layout_constraintEnd_toStartOf="@+id/ptAddDuration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddDuration"
        app:layout_constraintEnd_toStartOf="@+id/ptAddName"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ptAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:contentDescription="Name of the task"
        app:layout_constraintBottom_toTopOf="@+id/ptAddDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/category"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvAddDescription"
        app:layout_constraintEnd_toStartOf="@+id/spAddCategory"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/ptAddDescription"
        android:contentDescription="Spinner with the different categories of tasks"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btAdd"
        android:layout_width="340dp"
        android:layout_height="68dp"
        android:layout_marginBottom="320dp"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ptAddDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Duration of the task"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/spAddCategory"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>